--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -113,26 +113,48 @@ When there are as many agents on each side with fully-ordered preference lists, 
 }
 
 @InProceedings{Constantinescu2025ByzantineBoxes,
-    author={Constantinescu, Andrei and Wattenhofer, Roger},
-    title={Byzantine Game Theory: Sun Tzu's Boxes},
-    year={2025},
-    booktitle={Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems, Detroit, Michigan, USA},
-    month=may,
-    series={AAMAS'25},
-    abbr={AAMAS 25},
-    bibtex_show={true},
+  author = {Constantinescu, Andrei and Wattenhofer, Roger},
+  title = {Byzantine Game Theory: Sun Tzu's Boxes},
+  year = {2025},
+  isbn = {9798400714269},
+  publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+  address = {Richland, SC},
+  abstract = {We introduce the Byzantine Selection Problem, living at the intersection of game theory and fault-tolerant distributed computing. Here, an event organizer is presented with a group of \(n\) agents, and wants to select \(\ell < n\) of them to form a team. For these purposes, each agent \(i\) self-reports a positive skill value \(v_i\), and a team's value is the sum of its members' skill values. Ideally, the value of the team should be as large as possible, which can be easily achieved by selecting agents with the highest \(\ell\) skill values. However, an unknown subset of at most \(t < n\) agents are byzantine and hence not to be trusted, rendering their true skill values as \(0\). In the spirit of the distributed computing literature, the identity of the byzantine agents is not random but instead chosen by an adversary aiming to minimize the value of the chosen team. Can we still select a team with good guarantees in this adversarial setting? As it turns out, deterministically, it remains optimal to select agents with the highest \(\ell\) values. Yet, if \(t \ge \ell\), the adversary can choose to make all selected agents byzantine, leading to a team of value zero. To provide meaningful guarantees, one hence needs to allow for randomization, in which case the expected value of the selected team needs to be maximized, assuming again that the adversary plays to minimize it. For this case, we provide linear-time randomized algorithms that maximize the expected value of the selected team.},
+  booktitle = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems},
+  pages = {519--528},
+  numpages = {10},
+  keywords = {algorithms, byzantine fault tolerance, game theory, mechanism design, robust optimization},
+  location = {Detroit, MI, USA},
+  series = {AAMAS '25},
+  month = {may},
+  abbr = {AAMAS 25},
+  bibtex_show = {true},
+  arxiv = {2502.14812}
 }
 
+
 @InProceedings{Baharav2025CondorcetWeightedAnscombe,
-    author={Baharav, Carmel and Constantinescu, Andrei and Wattenhofer, Roger},
-    title={Condorcet Winners and Anscombe's Paradox Under Weighted Binary Voting},
-    year={2025},
-    booktitle={Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems, Detroit, Michigan, USA},
-    month=may,
-    series={AAMAS'25},
-    abbr={AAMAS 25},
-    bibtex_show={true},
+  author       = {Baharav, Carmel and Constantinescu, Andrei and Wattenhofer, Roger},
+  title        = {{Condorcet Winners and Anscombe's Paradox Under Weighted Binary Voting}},
+  booktitle    = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems (AAMAS 2025)},
+  pages        = {179--187},
+  numpages     = {9},
+  year         = {2025},
+  month        = may,
+  isbn         = {9798400714269},
+  publisher    = {International Foundation for Autonomous Agents and Multiagent Systems},
+  address      = {Richland, SC},
+  location     = {Detroit, MI, USA},
+  series       = {AAMAS '25},
+  abbr         = {AAMAS 25},
+  bibtex_show  = {true},
+  keywords     = {anscombe, complexity, condorcet, forbidden substructures, multiple referenda, ostrogorski, restricted domains, single-crossing},
+  abstract     = {We consider voting on multiple independent binary issues. In addition, a weighting vector for each voter defines how important they consider each issue. The most natural way to aggregate the votes into a single unified proposal is issue-wise majority (IWM): taking a majority opinion for each issue. However, in a scenario known as Ostrogorski's Paradox, an IWM proposal may not be a Condorcet winner, or it may even fail to garner majority support in a special case known as Anscombe's Paradox.
+We show that it is co-NP-hard to determine whether there exists a Condorcet-winning proposal even without weights. In contrast, we prove that the single-switch condition provides an Ostrogorski-free voting domain under identical weighting vectors. We show that verifying the condition can be achieved in linear time and no-instances admit short, efficiently computable proofs in the form of forbidden substructures. On the way, we give the simplest linear-time test for the voter/candidate-extremal-interval condition in approval voting and the simplest and most efficient algorithm for recognizing single-crossing preferences in ordinal voting.
+We then tackle Anscombe's Paradox. Under identical weight vectors, we can guarantee a majority-supported proposal agreeing with IWM on strictly more than half of the overall weight, while with two distinct weight vectors, such proposals can get arbitrarily far from IWM. The severity of such examples is controlled by the maximum average topic weight \(\tilde{w}_{\max}\): a simple bound derived from a partition-based approach is tight on a large portion of the range \(\tilde{w}_{\max} \in (0,1)\). Finally, we extend Wagner's rule to the weighted setting: an average majority across topics of at least \(3/4\) precludes Anscombe's paradox from occurring.},
+  arxiv        = {2502.14639},
 }
+
 
 @InProceedings{Constantinescu2024Convex,
   author={Constantinescu, Andrei and Ghinea, Diana and Wattenhofer, Roger and Westermann, Floris},
