--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
     author={Constantinescu, Andrei and Turko, Andrzej and Wattenhofer, Roger},
     title={Logarithmic Approximation for Road Pricing on Grids},
     year=2024,
-    abbr={In Submission},
+    abbr={arXiv},
     bibtex_show={true},
 }
 
@@ -18,7 +18,7 @@
 @InProceedings{Constantinescu2025Validity,
   author =	{Constantinescu, Andrei and Dufay, Marc and Ghinea, Diana and Wattenhofer, Roger},
   title =	{{Validity in Network-Agnostic Byzantine Agreement}},
-  booktitle =	{39th International Symposium on Distributed Computing (DISC 2025)},
+  booktitle =	{Proceedings of the 39th International Symposium on Distributed Computing},
   pages =	{24:1--24:23},
   series =	{Leibniz International Proceedings in Informatics (LIPIcs)},
   ISBN =	{978-3-95977-402-4},
@@ -44,7 +44,7 @@ We note that, for any non-trivial validity property, the condition \(2 \cdot t_s
 @InProceedings{Constantinescu2025AdaptiveBA,
   author        = {Constantinescu, Andrei and Dufay, Marc and Paramonov, Anton and Wattenhofer, Roger},
   title         = {{Brief Announcement: From Few to Many Faults: Adaptive Byzantine Agreement with Optimal Communication}},
-  booktitle     = {39th International Symposium on Distributed Computing (DISC 2025)},
+  booktitle     = {Proceedings of the 39th International Symposium on Distributed Computing},
   pages         = {52:1--52:8},
   series        = {Leibniz International Proceedings in Informatics (LIPIcs)},
   ISBN          = {978-3-95977-402-4},
@@ -69,7 +69,7 @@ In the asynchronous setting, we prove a lower bound of \(\Omega(n + t^2)\) on th
 @InProceedings{Acilan2025TFM,
   author =	{Acilan, Bahar and Constantinescu, Andrei and Heimbach, Lioba and Wattenhofer, Roger},
   title =	{{Transaction Fee Market Design for Parallel Execution}},
-  booktitle =	{7th Conference on Advances in Financial Technologies (AFT 2025)},
+  booktitle =	{Proceedings of the 7th Conference on Advances in Financial Technologies},
   pages =	{23:1--23:25},
   series =	{Leibniz International Proceedings in Informatics (LIPIcs)},
   ISBN =	{978-3-95977-400-0},
@@ -102,7 +102,7 @@ In this work, we aim to bridge the gap between the current fee market and the ne
   abstract = {In stable matching, one must find a matching between two sets of agents, commonly men and women, or job applicants and job positions. Each agent has a preference ordering over who they want to be matched with. Moreover a matching is said to be stable if no pair of agents prefer each other over their current matching.
 We consider solving stable matching in a distributed synchronous setting, where each agent is its own process. Moreover, we assume up to \(t_L\) agents on one side and \(t_R\) on the other side can be byzantine. After properly defining the stable matching problem in this setting, we study its solvability.
 When there are as many agents on each side with fully-ordered preference lists, we give necessary and sufficient conditions for stable matching to be solvable in the synchronous setting. These conditions depend on the communication model used, i.e., if parties on the same side are allowed to communicate directly, and on the presence of a cryptographic setup, i.e., digital signatures.},
-  booktitle = {Proceedings of the ACM Symposium on Principles of Distributed Computing},
+  booktitle = {Proceedings of the 44th ACM Symposium on Principles of Distributed Computing},
   pages = {181--191},
   numpages = {11},
   keywords = {stable matching, byzantine faults, distributed protocol},
@@ -138,7 +138,7 @@ When there are as many agents on each side with fully-ordered preference lists, 
 @InProceedings{Baharav2025CondorcetWeightedAnscombe,
   author       = {Baharav, Carmel and Constantinescu, Andrei and Wattenhofer, Roger},
   title        = {{Condorcet Winners and Anscombe's Paradox Under Weighted Binary Voting}},
-  booktitle    = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems (AAMAS 2025)},
+  booktitle    = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems},
   pages        = {179--187},
   numpages     = {9},
   year         = {2025},
