--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -142,7 +142,7 @@ When there are as many agents on each side with fully-ordered preference lists, 
   month = {may},
   abbr = {AAMAS 25},
   bibtex_show = {true},
-  arxiv = {2502.14812}
+  arxiv = {2502.14812},
   html = {https://dl.acm.org/doi/10.5555/3709347.3743567},
 }
 
