Add video link for Byzantine Boxes.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -143,6 +143,7 @@ When there are as many agents on each side with fully-ordered preference lists, 
   abbr = {AAMAS 25},
   bibtex_show = {true},
   arxiv = {2502.14812},
+  video = {https://youtu.be/7oGj7u66u_0?si=HvCraOHt2db1sc5P&t=1864},
   html = {https://dl.acm.org/doi/10.5555/3709347.3743567},
 }
 
