Video link for TFM paper.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -97,6 +97,7 @@ In the asynchronous setting, we prove a lower bound of \(\Omega(n + t^2)\) on th
 In this work, we aim to bridge the gap between the current fee market and the need for parallel execution by exploring alternative fee market designs. To this end, we propose a framework consisting of two key components: a Gas Computation Mechanism (GCM), which quantifies the load a transaction places on the network in terms of parallelization and computation, measured in units of gas, and a Transaction Fee Mechanism (TFM), which assigns a price to each unit of gas. We additionally introduce a set of desirable properties for a GCM, propose several candidate mechanisms, and evaluate them against these criteria. Our analysis highlights two strong candidates: the weighted area GCM, which integrates smoothly with existing TFMs such as EIP‑1559 and satisfies a broad subset of the outlined properties, and the time-proportional makespan GCM, which assigns gas costs based on the context of the entire block’s schedule and, through this dependence on the overall execution outcome, captures the dynamics of parallel execution more accurately.},
   month = {October},
   html = {https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.AFT.2025.23},
+  video = {https://www.youtube.com/watch?v=WYG7YyEw4gs},
 }
 
 @InProceedings{Constantinescu2025ByzantineStableMatching,
