--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -98,9 +98,7 @@ In this work, we aim to bridge the gap between the current fee market and the ne
   month = {October},
   html = {https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.AFT.2025.23},
   video = {https://www.youtube.com/watch?v=WYG7YyEw4gs},
-  note = {*Non-archival:* TLDR 2025 (acceptance rate: 20.5%)
-
-Test2.},
+  note = {Non-archival: The Latest in DeFi Research (TLDR) Conference, New York City, NY, USA*, May 2025 (acceptance rate: 20.5%)},
 }
 
 @InProceedings{Constantinescu2025ByzantineStableMatching,
