Add locations properly.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@
 @InProceedings{Constantinescu2025Validity,
   author =	{Constantinescu, Andrei and Dufay, Marc and Ghinea, Diana and Wattenhofer, Roger},
   title =	{{Validity in Network-Agnostic Byzantine Agreement}},
-  booktitle =	{Proceedings of the 39th International Symposium on Distributed Computing},
+  booktitle =	{Proceedings of the 39th International Symposium on Distributed Computing, Berlin, Germany},
   pages =	{24:1--24:23},
   series =	{Leibniz International Proceedings in Informatics (LIPIcs)},
   ISBN =	{978-3-95977-402-4},
@@ -49,7 +49,7 @@ We note that, for any non-trivial validity property, the condition \(2 \cdot t_s
 @InProceedings{Constantinescu2025AdaptiveBA,
   author        = {Constantinescu, Andrei and Dufay, Marc and Paramonov, Anton and Wattenhofer, Roger},
   title         = {{Brief Announcement: From Few to Many Faults: Adaptive Byzantine Agreement with Optimal Communication}},
-  booktitle     = {Proceedings of the 39th International Symposium on Distributed Computing},
+  booktitle     = {Proceedings of the 39th International Symposium on Distributed Computing, Berlin, Germany},
   pages         = {52:1--52:8},
   series        = {Leibniz International Proceedings in Informatics (LIPIcs)},
   ISBN          = {978-3-95977-402-4},
@@ -76,7 +76,7 @@ In the asynchronous setting, we prove a lower bound of \(\Omega(n + t^2)\) on th
 @InProceedings{Acilan2025TFM,
   author =	{Acilan, Bahar and Constantinescu, Andrei and Heimbach, Lioba and Wattenhofer, Roger},
   title =	{{Transaction Fee Market Design for Parallel Execution}},
-  booktitle =	{Proceedings of the 7th Conference on Advances in Financial Technologies},
+  booktitle =	{Proceedings of the 7th Conference on Advances in Financial Technologies, Pittsburgh, USA},
   pages =	{23:1--23:25},
   series =	{Leibniz International Proceedings in Informatics (LIPIcs)},
   ISBN =	{978-3-95977-400-0},
@@ -113,7 +113,7 @@ In this work, we aim to bridge the gap between the current fee market and the ne
   abstract = {In stable matching, one must find a matching between two sets of agents, commonly men and women, or job applicants and job positions. Each agent has a preference ordering over who they want to be matched with. Moreover a matching is said to be stable if no pair of agents prefer each other over their current matching.
 We consider solving stable matching in a distributed synchronous setting, where each agent is its own process. Moreover, we assume up to \(t_L\) agents on one side and \(t_R\) on the other side can be byzantine. After properly defining the stable matching problem in this setting, we study its solvability.
 When there are as many agents on each side with fully-ordered preference lists, we give necessary and sufficient conditions for stable matching to be solvable in the synchronous setting. These conditions depend on the communication model used, i.e., if parties on the same side are allowed to communicate directly, and on the presence of a cryptographic setup, i.e., digital signatures.},
-  booktitle = {Proceedings of the 44th ACM Symposium on Principles of Distributed Computing},
+  booktitle = {Proceedings of the 44th ACM Symposium on Principles of Distributed Computing, Huatulco, Mexico},
   pages = {181--191},
   numpages = {11},
   keywords = {stable matching, byzantine faults, distributed protocol},
@@ -133,7 +133,7 @@ When there are as many agents on each side with fully-ordered preference lists, 
   title = {Byzantine Game Theory: Sun Tzu's Boxes},
   year = {2025},
   isbn = {9798400714269},
-  publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+  publisher = {International Foundation for Autonomous Agents and Multiagent Systems, Detroit, USA},
   address = {Richland, SC},
   abstract = {We introduce the Byzantine Selection Problem, living at the intersection of game theory and fault-tolerant distributed computing. Here, an event organizer is presented with a group of \(n\) agents, and wants to select \(\ell < n\) of them to form a team. For these purposes, each agent \(i\) self-reports a positive skill value \(v_i\), and a team's value is the sum of its members' skill values. Ideally, the value of the team should be as large as possible, which can be easily achieved by selecting agents with the highest \(\ell\) skill values. However, an unknown subset of at most \(t < n\) agents are byzantine and hence not to be trusted, rendering their true skill values as \(0\). In the spirit of the distributed computing literature, the identity of the byzantine agents is not random but instead chosen by an adversary aiming to minimize the value of the chosen team. Can we still select a team with good guarantees in this adversarial setting? As it turns out, deterministically, it remains optimal to select agents with the highest \(\ell\) values. Yet, if \(t \ge \ell\), the adversary can choose to make all selected agents byzantine, leading to a team of value zero. To provide meaningful guarantees, one hence needs to allow for randomization, in which case the expected value of the selected team needs to be maximized, assuming again that the adversary plays to minimize it. For this case, we provide linear-time randomized algorithms that maximize the expected value of the selected team.},
   booktitle = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems},
@@ -155,7 +155,7 @@ When there are as many agents on each side with fully-ordered preference lists, 
 @InProceedings{Baharav2025CondorcetWeightedAnscombe,
   author       = {Baharav, Carmel and Constantinescu, Andrei and Wattenhofer, Roger},
   title        = {{Condorcet Winners and Anscombe's Paradox Under Weighted Binary Voting}},
-  booktitle    = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems},
+  booktitle    = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems, Detroit, USA},
   pages        = {179--187},
   numpages     = {9},
   year         = {2025},
