--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -133,10 +133,10 @@ When there are as many agents on each side with fully-ordered preference lists, 
   title = {Byzantine Game Theory: Sun Tzu's Boxes},
   year = {2025},
   isbn = {9798400714269},
-  publisher = {International Foundation for Autonomous Agents and Multiagent Systems, Detroit, USA},
+  publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
   address = {Richland, SC},
   abstract = {We introduce the Byzantine Selection Problem, living at the intersection of game theory and fault-tolerant distributed computing. Here, an event organizer is presented with a group of \(n\) agents, and wants to select \(\ell < n\) of them to form a team. For these purposes, each agent \(i\) self-reports a positive skill value \(v_i\), and a team's value is the sum of its members' skill values. Ideally, the value of the team should be as large as possible, which can be easily achieved by selecting agents with the highest \(\ell\) skill values. However, an unknown subset of at most \(t < n\) agents are byzantine and hence not to be trusted, rendering their true skill values as \(0\). In the spirit of the distributed computing literature, the identity of the byzantine agents is not random but instead chosen by an adversary aiming to minimize the value of the chosen team. Can we still select a team with good guarantees in this adversarial setting? As it turns out, deterministically, it remains optimal to select agents with the highest \(\ell\) values. Yet, if \(t \ge \ell\), the adversary can choose to make all selected agents byzantine, leading to a team of value zero. To provide meaningful guarantees, one hence needs to allow for randomization, in which case the expected value of the selected team needs to be maximized, assuming again that the adversary plays to minimize it. For this case, we provide linear-time randomized algorithms that maximize the expected value of the selected team.},
-  booktitle = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems},
+  booktitle = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems, Detroit, USA},
   pages = {519--528},
   numpages = {10},
   keywords = {algorithms, byzantine fault tolerance, game theory, mechanism design, robust optimization},
