Update student theses.

--- a/_bibliography/students.bib
+++ b/_bibliography/students.bib
@@ -1,7 +1,34 @@
 ---
 ---
+@MasterThesis{georgia,
+    title = {Aggregation Functions for Two-Team Games},
+    author = {Hadjipanayiotou, Georgia},
+    month = {Spring},
+    year = {2025},
+    note = {co-supervised with Borna Simi{\'c}},
+    abbr = {Master},
+}
+
+@SemesterThesis{julia,
+    title = {Creating Fair Foosball Match Schedules},
+    author = {H{\"u}tte, Julia},
+    month = {Spring},
+    year = {2025},
+    note = {co-supervised with Damien Berriaud},
+    abbr = {Semester},
+}
+
+@SemesterThesis{natalie,
+    title = {Bounds on the Coding Gap for Broadcast},
+    author = {Suter, Natalie},
+    month = {Spring},
+    year = {2025},
+    note = {co-supervised with Anton Paramonov},
+    abbr = {Semester},
+}
+
 @BachelorThesis{ramon,
-	title = {Voting for Coalitions},
+	title = {An Axiomatic Analysis of Partition Elections},
     author = {Wick, Ramon},
 	month = {Fall},
 	year = {2024},
@@ -9,7 +36,7 @@
 }
 
 @BachelorThesis{murezi,
-	title = {Morality in Sequential Games},
+	title = {Homo Moralis Plays the Centipede Game},
     author = {Giger, Murezi},
 	month = {Fall},
 	year = {2024},
