Fix date in bib entry.

--- a/_bibliography/students.bib
+++ b/_bibliography/students.bib
@@ -108,8 +108,8 @@
 @MasterThesis{andrzej,
 	title = {Logarithmic Approximation for Road Pricing on Grids},
     author = {Turko, Andrzej},
-	month = {Spring},
-	year = {2024},
+	month = {Fall},
+	year = {2023},
     abbr={Master},
 }
 
