Add one student entry and reorder some others.

--- a/_bibliography/students.bib
+++ b/_bibliography/students.bib
@@ -1,5 +1,14 @@
 ---
 ---
+@SemesterThesis{natalie,
+    title = {Bounds on the Coding Gap for Broadcast},
+    author = {Suter, Natalie},
+    month = {Spring},
+    year = {2025},
+    note = {co-supervised with Anton Paramonov},
+    abbr = {Semester},
+}
+
 @MasterThesis{georgia,
     title = {Aggregation Functions for Two-Team Games},
     author = {Hadjipanayiotou, Georgia},
@@ -18,13 +27,13 @@
     abbr = {Semester},
 }
 
-@SemesterThesis{natalie,
-    title = {Bounds on the Coding Gap for Broadcast},
-    author = {Suter, Natalie},
+@MasterThesis{georgii,
+    title = {Fault-Tolerant Dynamic Connectivity in the LOCAL Model},
+    author = {Levashov, Georgii},
     month = {Spring},
     year = {2025},
     note = {co-supervised with Anton Paramonov},
-    abbr = {Semester},
+    abbr = {Master},
 }
 
 @BachelorThesis{ramon,
