--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -98,7 +98,7 @@ In this work, we aim to bridge the gap between the current fee market and the ne
   month = {October},
   html = {https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.AFT.2025.23},
   video = {https://www.youtube.com/watch?v=WYG7YyEw4gs},
-  note = {Non-archival: *The Latest in DeFi Research (TLDR) Conference, New York City, NY, USA*, May 2025 (acceptance rate: 20.5%)},
+  note = {Non-archival: *The Latest in DeFi Research Conference, New York City, USA*, May 2025},
 }
 
 @InProceedings{Constantinescu2025ByzantineStableMatching,
@@ -149,6 +149,7 @@ When there are as many agents on each side with fully-ordered preference lists, 
   video = {https://youtu.be/7oGj7u66u_0?si=HvCraOHt2db1sc5P&t=1864},
   html = {https://dl.acm.org/doi/10.5555/3709347.3743567},
   selected = true,
+  note={Non-archival (oral): *10th International Workshop on Computational Social Choice, Vienna, Austria*, September 2025},
 }
 
 
@@ -279,6 +280,7 @@ In this work, we present the Decentralized Clock Network, a new approach for ach
   bibtex_show={true},
   award={Best Paper Award},
   selected=true,
+  note={Non-archival: *9th International Workshop on Computational Social Choice, Beersheba, Israel*, July 2023},
 }
 
 @InProceedings{Constantinescu2023RecoveringSingleCrossing,
@@ -361,4 +363,5 @@ We further show that checking whether distance strictly less than \(\lfloor(t - 
 and develop a \(O(nmk)\) algorithm for this case as well.},
   slides   ={single_crossing_cc_slides.pdf},
   bibtex_show={true},
+  note={Non-archival: *8th International Workshop on Computational Social Choice, Haifa, Israel*, June 2021},
 }
