Add number for TLDR

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -98,7 +98,7 @@ In this work, we aim to bridge the gap between the current fee market and the ne
   month = {October},
   html = {https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.AFT.2025.23},
   video = {https://www.youtube.com/watch?v=WYG7YyEw4gs},
-  note = {Non-archival: *The Latest in DeFi Research Conference, New York City, USA*, May 2025},
+  note = {Non-archival: *2nd The Latest in DeFi Research (TLDR) Conference, New York City, USA*, May 2025},
 }
 
 @InProceedings{Constantinescu2025ByzantineStableMatching,
